<resources>
    <string name="app_name">Submission 1 Aplikasi Story</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_login">Selamat Datang</string>
    <string name="subtitle_login">Silahkan login untuk melanjutkan</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_registrasi">Lengkapi data dirimu di bawah ini</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="policy"><![CDATA[Dengan register ke NewPost. Anda setuju dengan Ketentuan Pelayanan & Kebijakan Pengguna NewPost]]></string>
    <string name="addStory">Add Story</string>
    <string name="title_detail">Title Detail</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="upload_as_guest">Upload As Guest</string>
    <string name="capture_camera">Capture Camera</string>
    <string name="capturing">Capturing</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="backHome">Back</string>
    <string name="input_picture">Please input picture first</string>
    <string name="input_location">Please input location</string>
    <string name="not_geting_permission">Not getting permission</string>
    <string name="user_name_story">User name story</string>
    <string name="logout">Logout</string>
    <string name="failed_show_camera">Gagal memunculkan kamera.</string>
    <string name="is_back_camera">isBackCamera</string>
    <string name="picture">picture</string>
    <string name="galery">Galery</string>
    <string name="camera">Camera</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="photo">photo</string>
    <string name="text_plain">text/plain</string>
    <string name="image_jpeg">image/jpeg</string>
    <string name="image_all">image/*</string>
    <string name="home">Home</string>
    <string name="imagestorydetail">imageStoryDetail</string>
    <string name="logo">logo</string>
    <string name="detail_story">Detail Story</string>
    <string name="imagestory">imagestory</string>
    <string name="invalid_email">Format Email Salah</string>
    <string name="invalid_password">Minimal 8 Karakter</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="current_location">Add current location to this story</string>
    <string name="toast_activate_location">Please activate location services</string>
    <string name="format_location">%1$f, %2$f</string>
    <string name="share_location">Share Location</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
</resources>