<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLocationDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/maps"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tvNameDetail"
            app:layout_constraintEnd_toEndOf="@id/tvNameDetail"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imgStoryDetail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLocationDetail"
            android:contentDescription="@string/imagestorydetail" />

        <TextView
            android:id="@+id/tvNameDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/title_detail"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgStoryDetail"/>
        
        <TextView
            android:id="@+id/tvDescriptionDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/description"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tvNameDetail"
            app:layout_constraintEnd_toEndOf="@id/tvNameDetail"
            app:layout_constraintTop_toBottomOf="@id/tvNameDetail"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>